# python-debug-test

./: main.py  pyproject.toml
