[project]
name = "python-debug-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Tony",email = "tony.lbvre@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "appengine-python-standard (>=1.1.10,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
